create destination tables

--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgres://admin:q0YB5QDoqZ2FyboPR1GEmAOPtlK7rDkN@dpg-cm18aaocmk4c73d6o5h0-a.frankfurt-postgres.render.com/destyinations
+sqlalchemy.url = postgresql://admin:q0YB5QDoqZ2FyboPR1GEmAOPtlK7rDkN@dpg-cm18aaocmk4c73d6o5h0-a.frankfurt-postgres.render.com/destyinations
 
 
 [post_write_hooks]
